# modo-kit-central

./: .gitignore  CODEOWNERS  LICENSE  README.md  TECH_NOTES.md  build.py  install.py  lpkCreator.py  pyproject.toml  utils.py
.github/: CODEOWNERS
.github/workflows/: kit_package.yml
.run/: Debug.run.xml
community_hub/: index.cfg  license.txt
community_hub/configs/: MODO_COMU_HUB_QuickClips_POPOVER.CFG  MODO_COMU_HUB_Slack_POPOVER.CFG  MODO_COMU_HUB_SystemPrefs.CFG  MODO_COMU_HUB_TOP_BAR_MENU.cfg  MODO_COMU_HUB_Tutorials_POPOVER.CFG  hub_menu.cfg
community_hub/configs_old/: MODO_COMU_HUB_3rdParty_POPOVER.CFG  MODO_COMU_HUB_TOP_BAR_MENU.cfg
community_hub/libs/com_hub/: __init__.py  command.py  gui.py  gui_utils.py  prefs.py  update.py  utils.py  widgets.py
community_hub/lxserv/: Modo_Community_Hub_Cmd.py  com_hub_url_cmd.py
community_hub/resources/: authors.json  kits.json  scripting.json  social.json  style.css  videos.json
community_hub/resources/avatars/: AvatarProfileTemplate.psd
modo_kit_central/: index.cfg
modo_kit_central/configs/: mkc_menu.cfg
modo_kit_central/lxserv/: mkc_commands.py  mkc_debug.py
modo_kit_central/mkc/: __init__.py  command.py  database.py  files.py  github.py  gui.py  gui_utils.py  lib.py  modo.py  packages.py  prefs.py  update.py  utils.py  widgets.py
modo_kit_central/mkc/widgets/: core.py  tabs.py
modo_kit_central/resources/: kits.db  manifest.json  style.css
scripts/: __init__.py  build.py  database.py  extras.py  formatting.py  get_assets.py  install.py  prefs.py  run.py  search.py  utils.py  version.py
scripts/queries/: insert_author.sql  insert_kit.sql  table_authors.sql  table_kits.sql
scripts/resources/: authors.json  kits.json  style.css
snips/: Snippet_AppDataPath.py
