[tool.poetry]
name = "modo_kit_central"
version = "0.2.1"
description = "Kit to help you find and install kits for Modo."
authors = [
    "Shawn Frueh <shawnfrueh@live.com>"
]
license = "LICENSE"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

[tool.poetry.group.dev.dependencies]
# Add your development dependencies here
PySide6 = "6.3.1"
toml = "0.10.2"
modo-api = "^15.1.2"

[tool.poetry.group.kit]
# Kits required for modo_kit_central
optional = false

[tool.poetry.group.kit.dependencies]
# Add your kit dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[modo.kit]
short_name = "mkc"
label = "Modo Kit Central"
lpk_name = "modo_kit_central_{version}.lpk"

[tool.poetry.scripts]
install = "scripts.install:main"
build = "scripts.build:main"
app = "scripts.run:main"
